# Caffienated-Debuggers

./: .dockerignore  .gitattributes  API.md  ARCHITECTURE.md  AUDIT_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  app.py  examples.py  ffmpeg_err.txt  inference.py  openenv.yaml  package-lock.json  package.json  push_log.txt  pyproject.toml  test_api.py  test_local.py  vercel.json
app/Dashboard/: page.tsx
app/login/: page.tsx
app/stock/: page.tsx
components/: Navbar.tsx
lib/: supabase.ts
server/: app.py
static/: index.html  main.js  style.css
ticket_triage_env/: README.md  client.py  grader_easy.py  grader_hard.py  grader_medium.py  models.py
ticket_triage_env/Caffienated-Debuggers/: .gitignore  Dockerfile  inference.py
ticket_triage_env/Caffienated-Debuggers/ticket_triage_env/: __init__.py  episode_data.py  grader_hard.py  grader_medium.py  models.py
ticket_triage_env/server/: app.py  triage_environment.py
ticket_triage_env/ticket_triage_env/: client.py  grader_easy.py  grader_medium.py
ticket_triage_env/ticket_triage_env/server/: app.py
