[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-ticket-triage-env"
version = "0.1.0"
description = "OpenEnv environment: IT support ticket triage with partial rewards and deterministic graders"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenEnv Hackathon"}]
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "websocket-client>=1.7.0",
    "openai>=1.40.0",
]

[project.scripts]
server = "ticket_triage_env.server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ticket_triage_env*"]